Updated connection string

--- a/src/CaTestJz.Infrastructure/CaTestJz.Infrastructure.csproj
+++ b/src/CaTestJz.Infrastructure/CaTestJz.Infrastructure.csproj
@@ -7,6 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Database\CaTestJzDatabase.mdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Database\CaTestJzDatabase_log.ldf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.0.3" />
@@ -16,15 +25,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CaTestJz.Application\CaTestJz.Application.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Database\CaTestJzDatabase.mdf">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </None>
-    <None Update="Database\CaTestJzDatabase_log.ldf">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
