--- a/src/CaTestJz.Presentation.WebUI/appsettings.json
+++ b/src/CaTestJz.Presentation.WebUI/appsettings.json
@@ -13,7 +13,7 @@
     "Issuer": "ca-test-jz-issuer",
     "Audience": "ca-test-jz-audience"
   },
-  "ConnectionStrings": {
-    "CaTestJzDb": "Data Source=(localdb)\\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\\CaTestJzDb.mdf;Integrated Security=True;Connect Timeout=30;User Instance=True"
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=(localdb)\\mssqllocaldb;AttachDBFilename=%CONTENTROOTPATH%\\Database\\CaTestJzDatabase.mdf;Trusted_Connection=true;MultipleActiveResultSets=true"
+    }
   }
-}
