--- a/src/CaTestJz.Infrastructure/CaTestJz.Infrastructure.csproj
+++ b/src/CaTestJz.Infrastructure/CaTestJz.Infrastructure.csproj
@@ -7,11 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Database\CaTestJzDatabase.mdf" />
+    <None Remove="Database\CaTestJzDatabase_log.ldf" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="Database\CaTestJzDatabase.mdf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Database\CaTestJzDatabase_log.ldf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
